argo-events/overlays/production/virtualservice.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: webhook-vs
  namespace: argo-events
spec:
  hosts:
    - "*"
  gateways:
    - webhook-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: github-eventsource-svc
            port:
              number: 12000
